fixed overflow issue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,12 +7,16 @@
 
 body {
   font-family: 'Space Grotesk';
-  overflow:hidden;
+}
+
+.overall-container {
+  overflow: hidden;
+  position: relative;
 }
 
 .layout-container {
-  width: 100dvw;
-  height: 100dvh;
+  width: 100vw;
+  height: 100vh;
 }
 
 main {
@@ -20,6 +24,8 @@ main {
   padding: 3rem;
   width: fit-content;
   text-align: center;
+  width: 100%;
+  height: 100%; 
 }
 
 .timer-and-buttons-container {
@@ -109,7 +115,7 @@ button {
 
 .settings-container {
   width: 25vw;
-  height: 100vh;
+  height: 100%;
   position: absolute;
   right: -25vw;
   border-left:  2px solid;
